frontend kube/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: expense
  labels:
    app.kubernetes.io/name: nginx
spec:
  containers:
    - name: nginx
      image: chandrahari296/frontend:v2.0.0
      ports:
        - containerPort: 81
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"  # Mount PVC to nginx document root
          name: nginx-volume
  volumes:
    - name: nginx-volume
      persistentVolumeClaim:
        claimName: nginx-pvc  # Ensure PVC is correctly bound

---
apiVersion: v1
kind: Service
metadata:
  name: expense-service
  namespace: expense
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - port: 8080  # Kubernetes internal communication port (Ingress)
      protocol: TCP
      targetPort: 81  # App's container port
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-app-ingress
  namespace: expense
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Ensure your cluster supports this class (e.g., nginx, public)
  rules:
    - host: expense.durgasri.com
      http:
        paths:
          - path: /
            pathType: Prefix  # Corrected syntax
            backend:
              service:
                name: expense-service
                port:
                  number: 8080
